src/test/examples/custom/invalid/semanticErr/forLoop/forLoopStartTypeErr.wacc
# Type mismatch in start expression in for loop

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  for i in true until 10
    do
        skip
    done
end
